# Spire-of-Slime-Rust

./: .gitignore  Cargo.toml  README.md  build_and_move_debug.bat  build_and_move_release.bat  rustc-ice-2023-12-18T09_48_38-20432.txt  rustc-ice-2023-12-18T09_48_58-8436.txt  test.txt
rust/: Cargo.toml
rust/proc_macros/: Cargo.toml
rust/proc_macros/src/: lib.rs
rust/spire_audio/: Cargo.toml
rust/spire_audio/src/: lib.rs
rust/spire_combat/: Cargo.toml
rust/spire_combat/src/: id.rs  lib.rs  macros.rs  state.rs  util.rs
rust/spire_combat/src/effects/: mod.rs  on_self.rs  on_target.rs  persistent.rs
rust/spire_combat/src/entities/: mod.rs  position.rs  skill_intention.rs
rust/spire_combat/src/entities/actors/: base.rs  girl.rs  mod.rs  name.rs  ptr.rs  state.rs  stats.rs
rust/spire_combat/src/entities/actors/effects/: actor_extensions.rs  inner_conversions.rs  mod.rs  old_tempt_code.rs
rust/spire_combat/src/entities/actors/perks/: actor_extensions.rs  macros.rs  mod.rs
rust/spire_combat/src/entities/context/: mod.rs  serialization.rs  tick.rs
rust/spire_combat/src/entities/data/: asset_folder.rs  display_name.rs  mod.rs  perk_enum.rs  skill_variant.rs  variant.rs
rust/spire_combat/src/entities/stat/: common.rs  girl.rs  macros.rs  mod.rs  range.rs
rust/spire_combat/src/entity/: character.rs  girl.rs  mod.rs  position.rs  skill_intention.rs
rust/spire_combat/src/entity/data/: asset_folder.rs  display_name.rs  mod.rs  skill_variant.rs  variant.rs
rust/spire_combat/src/entity/stat/: dynamic.rs  mod.rs  range.rs  rigid.rs
rust/spire_combat/src/graphics/: mod.rs
rust/spire_combat/src/graphics/action_animation/: camera.rs  character_movement.rs  character_position.rs  mod.rs  speed_lines.rs  splash_screen.rs
rust/spire_combat/src/graphics/entity_anim/: character_node.rs  default_position.rs  mod.rs
rust/spire_combat/src/graphics/stages/: cave.rs  forest.rs  grove.rs  mod.rs  randomizer.rs  serialization.rs
rust/spire_combat/src/graphics/ui/: actor_stats.rs  character_stats.rs  mod.rs  skill_button.rs  speed_buttons.rs  targeting_tooltip.rs
rust/spire_combat/src/perk/: mod.rs
rust/spire_combat/src/skill_resolving/: defensive.rs  mod.rs  offensive.rs
rust/spire_combat/src/skill_types/: defensive.rs  lewd.rs  mod.rs  offensive.rs
rust/spire_combat/src/timeline/: mod.rs
rust/spire_local_map/: Cargo.toml
rust/spire_local_map/src/: lib.rs  state.rs  tile.rs
rust/spire_local_map/src/coordinates/: axial.rs  direction.rs  mod.rs  offset.rs
rust/spire_local_map/src/generation/: generator_ui.rs  map.rs  mod.rs  noise_grid.rs  pathing.rs
rust/spire_main_menu/: Cargo.toml
rust/spire_main_menu/src/: controller.rs  easters_iron_gauntlet.rs  easters_save_name.rs  lib.rs  load_button.rs
rust/spire_serialization/: Cargo.toml
rust/spire_serialization/src/: affairs.rs  controller.rs  file.rs  lib.rs  states.rs  stats.rs  upgrades.rs  world_location.rs
rust/spire_settings_menu/: Cargo.toml
rust/spire_settings_menu/src/: applying.rs  controller.rs  lib.rs  settings.rs
rust/spire_settings_menu/src/settings/: language.rs  mod.rs  skill_overlay_mode.rs  trait_impls.rs
rust/spire_shared/: Cargo.toml
rust/spire_shared/src/: enumerator_macro.rs  impl_trait_cast.rs  input.rs  into_boxed_impl.rs  lib.rs  node_utils.rs  num.rs  panel_are_you_sure.rs  rand_utils.rs
rust/spire_world_map/: Cargo.toml
rust/spire_world_map/src/: controller.rs  lib.rs  location.rs  path.rs
rust/src/: game_manager.rs  lib.rs  panic_hook.rs  start_screen.rs
rust/src/audio/: bus.rs  mod.rs  pitch_randomizer.rs  play_on_click.rs  play_on_hover.rs
rust/src/combat/: mod.rs  stat.rs
rust/src/combat/action_animation/: camera.rs  character_movement.rs  initial_position.rs  mod.rs  speed_lines.rs  splash_screen.rs
rust/src/combat/effects/: mod.rs  onSelf.rs  onTarget.rs  persistent.rs
rust/src/combat/entity/: character.rs  girl.rs  mod.rs  position.rs  skill_intention.rs
rust/src/combat/entity/data/: character.rs  mod.rs  skill_name.rs
rust/src/combat/entity/stat/: dynamic.rs  mod.rs  range.rs  rigid.rs
rust/src/combat/entity_node/: mod.rs
rust/src/combat/graphics/: mod.rs
rust/src/combat/graphics/action_animation/: character_movement.rs  character_position.rs  initial_position.rs  mod.rs  speed_lines.rs
rust/src/combat/graphics/entity_anim/: character_node.rs  default_position.rs  mod.rs
rust/src/combat/graphics/stages/: cave.rs  forest.rs  grove.rs  mod.rs  randomizer.rs  serialization.rs
rust/src/combat/graphics/ui/: character_stats.rs  mod.rs  skill_button.rs  speed_buttons.rs  targeting_tooltip.rs
rust/src/combat/perk/: mod.rs
rust/src/combat/skill_resolving/: defensive.rs  mod.rs  offensive.rs
rust/src/combat/skill_types/: defensive.rs  lewd.rs  mod.rs  offensive.rs
rust/src/combat/skills/: defensive.rs  lewd.rs  mod.rs  offensive.rs
rust/src/combat/timeline/: mod.rs
rust/src/combat/ui/: character_stats.rs  mod.rs  speed_buttons.rs  targeting_tooltip.rs
rust/src/game_manager/: mod.rs  state_main_menu.rs  state_world_map.rs
rust/src/game_states/: main_menu.rs  mod.rs  state_main_menu.rs  state_world_map.rs
rust/src/gdnative_macros/: mod.rs
rust/src/local_map/: mod.rs  state.rs  tile.rs
rust/src/local_map/coordinates/: axial.rs  direction.rs  mod.rs  offset.rs
rust/src/local_map/generation/: generator_ui.rs  grid.rs  map.rs  mod.rs  noise_grid.rs  pathing.rs
rust/src/main_menu/: controller.rs  easters_iron_gauntlet.rs  easters_save_name.rs  load_button.rs  mod.rs
rust/src/misc/: int_conversions.rs  mod.rs  panel_are_you_sure.rs
rust/src/save/: affairs.rs  controller.rs  file.rs  mod.rs  singleton.rs  states.rs  stats.rs  upgrades.rs
rust/src/saves/: file.rs  mod.rs
rust/src/settings_menu/: mod.rs  settings.rs
rust/src/util/: bounded_integer_traits.rs  bounded_integer_traits_U32.rs  bounded_isize.rs  bounded_u32.rs  disallow_click_focus.rs  inspectors.rs  int_conversions.rs  mod.rs  panel_are_you_sure.rs  tref_acquirer.rs  weighted_rand.rs
rust/src/world_map/: controller.rs  location.rs  mod.rs  path.rs
(+2087 files in other folders)
