[package]
name = "spire"
version = "0.1.0"
authors = ["Houtamelo"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.11"
rand = { version =  "0.8", features = ["serde1"] }
rand_xoshiro = { version = "0.6", features = ["serde1"] }
proc_macros = { path = "proc_macros" }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
util = { package = "houtamelo_utils", version = "2.0" }
util_gdnative = { package = "houtamelo_utils_gdnative", version = "2.0" }
gdnative_export_node_as_path = "0.1"
getrandom = "0.2"
float-cmp = "0.9"
bracket-noise = "0.8.7"
bracket-pathfinding = { version = "0.8.7", features = ["threaded"] }
comfy-bounded-ints = { version = "0.2", features = ["serde", "div_assign_zero"] }
parking_lot = "0.12"
uuid = { version = "1.8", features = ["serde"] }
strum = "0.26"
strum_macros = "0.26"
enum_variant_type = "0.3.1"
enum_dispatch = "0.3"
anyhow = { version = "1.0", features = ["backtrace", "std"] }
keyframe = { version = "1.1", features = ["alloc"] }
keyframe_derive = "1.0"
inline_format = "0.2"
gdnative_tweener = "0.5"
