[package]
name = "spire"
version = "0.1.0"
authors = ["Houtamelo"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
audio = { package = "spire_audio", path = "spire_audio" }
combat = { package = "spire_combat", path = "spire_combat" }
local_map = { package = "spire_local_map", path = "spire_local_map" }
main_menu = { package = "spire_main_menu", path = "spire_main_menu" }
settings_menu = { package = "spire_settings_menu", path = "spire_settings_menu" }
world_map = { package = "spire_world_map", path = "spire_world_map" }
shared = { package = "spire_shared", path = "spire_shared" }

godot = { workspace = true, features = ["experimental-godot-api", "experimental-threads"] }
houtamelo_utils = { workspace = true }
houtamelo_utils_gdext = { workspace = true }
spire_tween = { workspace = true }
declarative_type_state = { workspace = true }
replace_with = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
getrandom = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
comfy-bounded-ints = { workspace = true }