[package]
name = "spire_combat"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../spire_shared", package = "spire_shared" }

houtamelo_utils = { workspace = true, features = ["rand", "serde"] }
houtamelo_utils_gdext = { workspace = true }
godot = { workspace = true }
spire_tween = { workspace = true }
declarative_type_state = { workspace = true }
replace_with = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
derived-deref = { workspace = true }
comfy-bounded-ints = { workspace = true }
perfect-derive = "0.1.5"

strum = "0.26"
strum_macros = "0.26"
uuid = { version = "1.9", features = ["serde"] }
slotmap = { version = "1.0", features = ["serde", "std"] }
discrimenum = "=0.1.0"
zwohash = "0.1.2"

# Looks silly but it's needed for the comfy-bounded-ints macro
[features]
default = ["serde"]
serde = []