[package]
name = "spire_local_map"
version = "0.1.0"
edition = "2021"

[dependencies]
combat = { path = "../spire_combat", package = "spire_combat" }
shared = { path = "../spire_shared", package = "spire_shared" }

gdnative = "0.11.3"
gdnative_export_node_as_path = "0.1.2"
util = { package = "houtamelo_utils", version = "2.0" }
util_gdnative = { package = "houtamelo_utils_gdnative", version = "2.0" }
serde = { version = "1.0.201", features = ["derive"] }
comfy-bounded-ints = "0.2"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
bracket-noise = "0.8.7"
bracket-pathfinding = "0.8.7"