[package]
name = "spire_local_map"
version = "0.1.0"
edition = "2021"

[dependencies]
combat = { path = "../spire_combat", package = "spire_combat" }
shared = { path = "../spire_shared", package = "spire_shared" }

godot = { workspace = true }
houtamelo_utils = { workspace = true }
houtamelo_utils_gdext = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
comfy-bounded-ints = { workspace = true }

bracket-noise = "0.8"
bracket-pathfinding = "0.8"
