[package]
name = "spire_settings_menu"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../spire_shared", package = "spire_shared" }
audio = { path = "../spire_audio", package = "spire_audio" }

godot = { workspace = true }
houtamelo_utils = { workspace = true }
houtamelo_utils_gdext = { workspace = true }
declarative_type_state = { workspace = true }
strum = "0.26"
strum_macros = "0.26"