[package]
name = "spire_shared"
version = "0.1.0"
edition = "2021"

[dependencies]
godot = { workspace = true }
houtamelo_utils = { workspace = true }
houtamelo_utils_gdext = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
comfy-bounded-ints = { workspace = true }
serde = { workspace = true }
float-cmp = "0.10"

[features]
default = ["serde"]
serde = []