[package]
name = "spire_world_map"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../spire_shared", package = "spire_shared" }

godot = { workspace = true }
serde = { workspace = true }
houtamelo_utils = { workspace = true }
houtamelo_utils_gdext = { workspace = true }
strum = "0.26"
strum_macros = "0.26"